--- a/google.html
+++ b/google.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="google.css" />
   </head>
   <body>
     <strong>
